Decouple authentication from web app
