# packages/node-app/src/routes/auth.route.ts
@@ -1,9 +1,8 @@
 import express from 'express';
-
-import { login, me } from '../controllers/auth.controller';
+import { getCurrentUser, googleOauth } from '../controllers/auth.controller';
 import { verifyToken } from '../middlewares/auth.middleware';
 
 export const router = express.Router();
 
-router.post('/login', login);
-router.get('/me', verifyToken, me);
+router.get('/user', verifyToken, getCurrentUser);
+router.get('/google', googleOauth);
