# packages/node-app/src/swagger.json
@@ -11,10 +11,6 @@
   },
   "servers": [
     {
-      "url": "https://luckydart-api.fly.dev",
-      "description": "Public API"
-    },
-    {
       "url": "http://localhost:3000",
       "description": "Local API"
     }
@@ -24,6 +20,7 @@
       "get": {
         "tags": ["giveaways"],
         "description": "Get all giveaways",
+        "security": [ { "bearerAuth": [] } ],
         "parameters": [
           {
             "name": "active",
@@ -61,8 +58,9 @@
         }
       },
       "post": {
-        "tags": ["giveaways", "admin"],
-        "description": "Create new giveaway",
+        "tags": ["giveaways"],
+        "description": "[Admin only] Create new giveaway",
+        "security": [ { "bearerAuth": [] } ],
         "requestBody": {
           "content": {
             "multipart/form-data": {
@@ -146,6 +144,7 @@
       "get": {
         "tags": ["giveaways"],
         "description": "Get giveaway",
+        "security": [ { "bearerAuth": [] } ],
         "parameters": [
           {
             "name": "giveawayId",
@@ -177,8 +176,9 @@
         }
       },
       "put": {
-        "tags": ["giveaways", "admin"],
-        "description": "Update giveaway",
+        "tags": ["giveaways"],
+        "description": "[Admin only] Update giveaway",
+        "security": [ { "bearerAuth": [] } ],
         "parameters": [
           {
             "name": "giveawayId",
@@ -246,8 +246,9 @@
     },
     "/giveaway/{giveawayId}/generate-winners": {
       "get": {
-        "tags": ["giveaways", "admin"],
-        "description": "Generate giveaway winners",
+        "tags": ["giveaways"],
+        "description": "[Admin only] Generate giveaway winners",
+        "security": [ { "bearerAuth": [] } ],
         "parameters": [
           {
             "name": "giveawayId",
@@ -291,6 +292,7 @@
       "get": {
         "tags": ["giveaways"],
         "description": "Get giveaway participants",
+        "security": [ { "bearerAuth": [] } ],
         "parameters": [
           {
             "name": "giveawayId",
@@ -344,6 +346,7 @@
       "put": {
         "tags": ["giveaways"],
         "description": "Update participant state",
+        "security": [ { "bearerAuth": [] } ],
         "parameters": [
           {
             "name": "giveawayId",
@@ -394,6 +397,7 @@
       "get": {
         "tags": ["locations"],
         "description": "Get all locations",
+        "security": [ { "bearerAuth": [] } ],
         "responses": {
           "200": {
             "description": "OK",
@@ -420,8 +424,9 @@
         }
       },
       "post": {
-        "tags": ["locations", "admin"],
-        "description": "Create new location",
+        "tags": ["locations"],
+        "description": "[Admin only] Create new location",
+        "security": [ { "bearerAuth": [] } ],
         "parameters": [
           {
             "name": "name",
@@ -469,8 +474,9 @@
     },
     "/locations/{locationId}": {
       "put": {
-        "tags": ["locations", "admin"],
-        "description": "Update location",
+        "tags": ["locations"],
+        "description": "[Admin only] Update location",
+        "security": [ { "bearerAuth": [] } ],
         "parameters": [
           {
             "name": "locationId",
@@ -522,8 +528,9 @@
         }
       },
       "delete": {
-        "tags": ["locations", "admin"],
-        "description": "Delete location",
+        "tags": ["locations"],
+        "description": "[Admin only] Delete location",
+        "security": [ { "bearerAuth": [] } ],
         "parameters": [
           {
             "name": "locationId",
@@ -548,49 +555,11 @@
         }
       }
     },
-    "/login": {
-      "post": {
-        "tags": ["authentication"],
-        "description": "Login user",
-        "parameters": [
-          {
-            "name": "tokenType",
-            "in": "query",
-            "required": true
-          },
-          {
-            "name": "accessToken",
-            "in": "query",
-            "required": true
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "API access token",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "example": {
-                    "token": "auth-token"
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Invalid Authentication"
-          },
-          "5XX": {
-            "description": "Unexpected error"
-          }
-        }
-      }
-    },
-    "/me": {
+    "/authentication/user": {
       "get": {
         "tags": ["authentication"],
-        "description": "Get user",
+        "description": "Get current user",
+        "security": [ { "bearerAuth": [] } ],
         "responses": {
           "200": {
             "description": "OK",
@@ -719,6 +688,28 @@
           "longitude": { "type": "number", "required": true },
           "radius": { "type": "number", "required": true }
         }
+      }
+    },
+    "securitySchemes": {
+      "googleOAuth": {
+        "type": "oauth2",
+        "description": "Use this to authenticate using Google OAuth and get the Bearer token",
+        "flows": {
+          "authorizationCode": {
+            "authorizationUrl": "https://accounts.google.com/o/oauth2/v2/auth",
+            "tokenUrl": "https://oauth2.googleapis.com/token",
+            "scopes": {
+              "profile": "Use this scope to access user's basic profile info",
+              "email": "Use this scope to access user's email address"
+            }
+          }
+        }
+      },
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT",
+        "description": "Use this to access all the private API endpoints"
       }
     }
   }
